[package]
name = "timing"
version = "0.1.0"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"
description = "A simple crate for timing stuff"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
